# wiki_llm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.py  wiki-llm.py
.github/workflows/: ci.yml
config/: example.py  exemplo_normas.py  my_wiki.py  my_wiki.py.bak
config/prompts/: wiki_agent_create_theme.md  wiki_agent_create_topics.md  wiki_chat.md  wiki_consolidate_themes.md  wiki_editor.md  wiki_evaluate_articles.md  wiki_evaluate_policies.md  wiki_evaluate_projects.md  wiki_lint.md  wiki_summary_articles.md  wiki_summary_notes.md  wiki_summary_projects.md  wiki_themes_normalize.md  wiki_topics_normalize.md
content_error/: Documentação - Framework de Identificação de Lançamentos Contábeis Atípicos.docx
k8s/: chat-deployment.yaml  configmap.yaml  pipeline-cronjob.yaml  secret.yaml
src/: __init__.py  __main__.py  cli.py  pipeline.py  setup_wizard.py
src/llm/: base.py  bedrock.py  factory.py  log.py  ollama.py  openai.py  openrouter.py
src/models/: config.py  document.py  evaluation.py
src/readers/: base.py  filesystem.py
src/stages/: _utils.py  consolidate.py  generate.py  groups.py  index.py  key_theme.py  lint.py  repair.py  taxonomy.py
src/ui/: app.py  chat_engine.py
tests/: conftest.py  test_pipeline.py
tests/test_llm/: test_backends.py  test_base.py  test_factory.py  test_log.py
tests/test_models/: test_config.py  test_document.py  test_evaluation.py
tests/test_readers/: test_base.py  test_filesystem.py
tests/test_stages/: test_consolidate.py  test_generate.py  test_groups.py  test_index.py  test_key_theme.py  test_lint.py  test_repair.py  test_utils.py
