[project]
name = "wiki-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-hero",
    "pydantic>=2.0",
    "typer>=0.12",
    "instructor>=1.0",
    "openai>=1.0",
    "boto3>=1.34",
    "botocore>=1.34",
    "markitdown[docx,pptx,xlsx]>=0.1",
    "rank-bm25>=0.2",
    "jinja2>=3.1",
    "nicegui>=1.4",
    "python-dotenv>=1.0",
    "tqdm>=4.0",
    "langgraph>=0.1",
    "langchain-core>=0.2",
    "langchain-aws>=0.1",
    "langchain-openai>=0.1",
]

[project.scripts]
wiki-llm = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[[tool.uv.index]]
url = "http://nexus.bndes.net:8180/nexus/repository/pypi-proxy/simple"

[[tool.uv.index]]
url = "http://nexus.bndes.net:8180/nexus/repository/pypi-internal/simple"